--- a/usher-service/usher-html/src/login.html
+++ b/usher-service/usher-html/src/login.html
@@ -106,6 +106,14 @@
       <div class="login-form-line">
         <button class="button login-submit-button" onclick="login()">登录</button>
       </div>
+      <div class="login-form-line">
+        <!-- 网站底部 -->
+        <footer>
+          <div class="footer-content">
+            <p>备案号：<a href="http://beian.miit.gov.cn/" target="_blank">鲁ICP备2024133183号-1</a></p>
+          </div>
+        </footer>
+      </div>
 
     </form>
 
@@ -133,12 +141,6 @@
     </div>
   </div>
 </div>
-<!-- 网站底部 -->
-<footer>
-  <div class="footer-content">
-    <p>备案号：<a href="http://beian.miit.gov.cn/" target="_blank">鲁ICP备2024133183号-1</a></p>
-  </div>
-</footer>
 
 
 <script src="/js/script.js"></script>
