--- a/usher-service/usher-html/src/login.html
+++ b/usher-service/usher-html/src/login.html
@@ -106,15 +106,9 @@
       <div class="login-form-line">
         <button class="button login-submit-button" onclick="login()">登录</button>
       </div>
-      <div class="login-form-line">
-        <!-- 网站底部 -->
-        <footer>
-          <div class="footer-content">
-            <p>备案号：<a href="http://beian.miit.gov.cn/" target="_blank">鲁ICP备2024133183号-1</a></p>
-          </div>
-        </footer>
-      </div>
 
+      <div class="login-middle-top-title">备案号：<a href="http://beian.miit.gov.cn/"
+                                                    target="_blank">鲁ICP备2024133183号-1</a></div>
     </form>
 
   </div>
