dev 版本统一 快照

--- a/usher-service/usher-html/src/login.html
+++ b/usher-service/usher-html/src/login.html
@@ -84,7 +84,7 @@
   <div class="login-middle-top-logo">
     <img alt src="/pic/logo.gif">
   </div>
-  <div class="login-middle-top-title">usher框架 v 2.1.0.4.usher</div>
+  <div class="login-middle-top-title">usher框架 v 2.1.0.5.usher-SNAPSHOT</div>
   <div class="login-middle-login-border">
     <form class="login-form login-submit-target" onsubmit="return false;">
       <div class="login-form-line username-login-form-line">
